# photovoltaik-rechner

./: .gitignore  CLAUDE.md  README.md  flake.nix  package.json  svelte.config.js  vite.config.js
scripts/: build-icon.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: afa.rs  crud.rs  db.rs  exports.rs  lib.rs  main.rs  reports.rs  types.rs  verlauf.rs
src/lib/: api.ts  types.ts  utils.ts
src/lib/components/: BarChart.svelte  Nav.svelte  PeriodVerlauf.svelte  StatTile.svelte
src/lib/components/ui/: Button.svelte  Card.svelte  CardHeader.svelte  DateField.svelte  Input.svelte  Label.svelte  MonthField.svelte  Select.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/anlage/: +page.svelte
src/routes/ausgaben/: +page.svelte
src/routes/auszahlungen/: +page.svelte
src/routes/einstellungen/: +page.svelte
src/routes/erfassung/: +page.svelte
src/routes/euer/: +page.svelte
src/routes/statistik/: +page.svelte
src/routes/ust/: +page.svelte
vendor-import-anker/: build-sidecar.sh  main.py  requirements.txt
vendor-import-solaredge/: build-sidecar.sh  main.py
