[package]
name = "photovoltaik"
version = "0.1.0"
description = "Photovoltaik-Verwaltung — Tauri App"
authors = ["Christopher Ziesch"]
edition = "2021"

[lib]
name = "photovoltaik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
